--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,11 @@
 <!-- TODO start with displaying info about the native stuff found in the area -->
 <body class="container" id="container">
     <article class="result-container" id="result-container" *ngIf="lastSearch$ | async as lastSearch">
-        <section *ngFor="let result of lastSearch.results; let i = index;" class="result-item" id="result-item{{i}}">
-            <h1 class="result-species" id="result-species">{{result.species}}</h1>
-            <h3 class="result-genus" id="result-genus">Genus: {{result.genus}}</h3>
-            <h4 class="result family family" id="result">Family: {{result.family}}</h4>
+        <section *ngFor="let result of lastSearch.results; let i = index;" class="result-item" id="result-item-{{i}}">
+            <h1 class="result-scientific-name" id="result-scientific-name-{{i}}">{{result.acceptedScientificName}}</h1>
+            <h2 class="result-species" id="result-species-{{i}}">{{result.species}}</h2>
+            <h3 class="result-genus" id="result-genus-{{i}}">Genus: {{result.genus}}</h3>
+            <h4 class="result-family" id="result-family-{{i}}">Family: {{result.family}}</h4>
         </section>
     </article>
 </body>
