Added more todos, added some packages related to mapping and drawing maps on canvas

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,4 +9,8 @@
             <!-- <h5 class="result-taxonomic-status" id="result-taxonomic-status-{{i}}">{{result.taxonomicStatus}}</h5> -->
         </section>
     </article>
+    <br>
+    <article class="gov-container" id="gov-container">
+        
+    </article>
 </body>
